--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "ipfs-core": "^0.16.1",
+    "it-all": "^1.0.6",
     "multer": "^1.4.5-lts.1"
   },
   "engines": {
